add now working without first still not for URL

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -64,6 +64,8 @@
                 crossorigin="anonymous"></script>
         <script src="{{ asset('bundles/mhmail/js/jscolor.min.js') }}"></script>
         <script src="{{ asset('bundles/mhmail/bower_components/simplemde/dist/simplemde.min.js') }}"></script>
+        <script src="https://use.fontawesome.com/f5bf701764.js"></script>
+
 
     {% endblock %}
 
