--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
@@ -11,12 +11,12 @@
     Souhaitez-vous poursuivre ?</p>
 
     <div class="well">
-        <form action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id, 'newsletter_id':newsletter_id}) }}" method="post">
+        <form action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id}) }}" method="post">
             <input type="submit" value="Supprimer" class="btn btn-danger"/>
             {{ form_rest(form) }}
         </form>
     </div>
-    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.id, 'newsletter_id':newsletter_id} ) }}">Retour</a>
+    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.newsletter.id} ) }}">Retour</a>
 
     <hr>
 {% endblock %}
