--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/add.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/add.html.twig
@@ -13,7 +13,7 @@
         </div>
     </div>
     <br>
-    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': id}) }}">Retour</a>
+    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.newsletter.id}) }}">Retour</a>
 
 
 {% endblock %}
