Début de documentation

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -40,6 +40,7 @@
                 <h3>Menu</h3>
                 <ul class="nav nav-pills nav-stacked">
                     <li><a href="{{ path('mh_newsletter_home') }}">Newsletter</a> </li>
+                    <li><a href="{{ path('mh_newsletter_doc_view') }}">Documentation</a> </li>
                 </ul>
             </div>
             <div id="content" class="col-md-10">
